(fix) Fix footer spacing issue

--- a/client/style.css
+++ b/client/style.css
@@ -18,6 +18,7 @@
 body, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6  {
   font-family: "Helvetica Neue", Arial, sans-serif;
   color: #191414;
+  height:100%;
 }
 
 .hide-this {
@@ -143,10 +144,13 @@ body, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6  {
  */
 
 .album-list-outer {
-  height: 600px;
   overflow-y: scroll;
   padding-bottom: 10px;
   margin-bottom: 40px;
+}
+
+.album-list-container {
+  height: 600px;
 }
 
 .album-image {
@@ -285,4 +289,7 @@ footer > span {
 }
 .footer-link:hover{
   color:black;
+}
+.footer-position {
+  bottom: 0;
 }
